--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
                   </div>
                 </div>
                 <div class="chapterPanel panel">
-                  <div class="panelTitle">🗺️ 챕터 선택</div>
-                  <div class="chapterSelector">
-                    <button class="btn ghost chapterArrow" id="btnChapterPrev" type="button" aria-label="이전 챕터">◀</button>
-                    <div class="chapterCurrent">
-                      <div class="chapterName" id="chapterName">챕터 1 · 잿빛 입구</div>
-                      <div class="chapterHint" id="chapterHint">좌우 화살표로 챕터를 선택하세요</div>
+                  <div class="chapterUiBox">
+                    <div class="panelTitle">🗺️ 챕터 선택</div>
+                    <div class="chapterSelector">
+                      <button class="btn ghost chapterArrow" id="btnChapterPrev" type="button" aria-label="이전 챕터">◀</button>
+                      <div class="chapterCurrent">
+                        <div class="chapterName" id="chapterName">챕터 1 · 잿빛 입구</div>
+                        <div class="chapterHint" id="chapterHint">좌우 화살표로 챕터를 선택하세요</div>
+                      </div>
+                      <button class="btn ghost chapterArrow" id="btnChapterNext" type="button" aria-label="다음 챕터">▶</button>
                     </div>
-                    <button class="btn ghost chapterArrow" id="btnChapterNext" type="button" aria-label="다음 챕터">▶</button>
+                    <button class="btn primary chapterEnterBtn" id="btnChapterEnter" type="button">🚪 입장</button>
                   </div>
-                  <button class="btn primary chapterEnterBtn" id="btnChapterEnter" type="button">🚪 입장</button>
                 </div>
                 <div class="lobbyActions">
                   <button class="btn ghost" id="btnLobbyHeroes" type="button">🧙 영웅 목록</button>
