feat: 4슬롯 장비 뽑기/장착 시스템 추가

--- a/index.html
+++ b/index.html
@@ -76,10 +76,15 @@
                   <div class="summonMeta">
                     <div class="summonDesc">🧿 현재 결정: <span id="summonShard">0</span></div>
                     <div class="summonDesc" id="summonRateInfo">🎯 확률 정보</div>
+                    <div class="summonDesc" id="summonEquipRateInfo">🛠 장비 확률 정보</div>
                   </div>
                   <div class="summonActions">
                     <button class="btn primary" id="btnSummon1" type="button">🎟️ 1회 뽑기</button>
                     <button class="btn primary" id="btnSummon10" type="button">🎟️ 10회 뽑기</button>
+                  </div>
+                  <div class="summonActions">
+                    <button class="btn ghost" id="btnEquipSummon1" type="button">🛠 장비 1회 뽑기</button>
+                    <button class="btn ghost" id="btnEquipSummon10" type="button">🛠 장비 10회 뽑기</button>
                   </div>
                   <div class="summonDesc">📜 최근 결과</div>
                   <div id="summonResultList" class="summonResultList"></div>
