전투 상황별 캐릭터 랜덤 대사 시스템 추가

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <div id="heroLane" class="lane heroes" aria-label="아군 라인"></div>
                 <div id="enemyLane" class="lane enemies" aria-label="적군 라인"></div>
                 <div id="fxLayer" class="fxLayer" aria-hidden="true"></div>
+                <div id="dialogLayer" class="dialogLayer" aria-hidden="true"></div>
               </div>
               <div class="logHead">
                 <div class="panelTitle">📜 전투 로그</div>
