배경음악(bgm.mp3) 재생 및 BGM 토글 추가

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             </div>
             <div class="actions">
               <button class="btn ghost tiny" id="btnHudToggle" type="button" aria-pressed="false">🔽 상세</button>
+              <button class="btn ghost tiny" id="btnBgmToggle" type="button" aria-pressed="true">🔊 BGM</button>
               <button class="btn ghost" id="btnPause" type="button">⏸️ 일시정지</button>
               <button class="btn ghost danger" id="btnRetry" type="button">🔄 다시 시작</button>
             </div>
