--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </div>
                 <div class="heroPageBody">
                   <div id="heroDetail" class="heroDetail"></div>
+                  <div id="heroShowcase" class="heroShowcase"></div>
                   <div id="heroRosterGrid" class="heroRosterGrid"></div>
                 </div>
               </div>
