--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="lobbyStat">⚔ 편성 <span id="lobbyEquipped">0/4</span></div>
                   </div>
                 </div>
-                <div class="chapterPanel panel">
+                <div class="chapterPanel">
                   <div class="chapterUiBox">
                     <div class="chapterSelector">
                       <button class="btn ghost chapterArrow" id="btnChapterPrev" type="button" aria-label="이전 챕터">◀</button>
