feat: 메인 로비에서 영웅 편성/대사 지원

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     <button class="btn primary chapterEnterBtn" id="btnChapterEnter" type="button">🚪 입장</button>
                   </div>
                 </div>
+                <div class="lobbyLoadoutPanel">
+                  <div class="lobbyLoadoutHead">⚔️ 출전 영웅 편성 (메인에서 순서 변경)</div>
+                  <div id="lobbyLoadoutList" class="lobbyLoadoutList"></div>
+                  <div class="lobbyBenchHead">🪑 대기 영웅</div>
+                  <div id="lobbyBenchList" class="lobbyBenchList"></div>
+                </div>
                 <div class="lobbyActions">
                   <button class="btn ghost" id="btnLobbyHeroes" type="button">🧙 영웅 목록</button>
                   <button class="btn ghost" id="btnLobbySummon" type="button">🎲 영웅 뽑기</button>
