--- a/index.html
+++ b/index.html
@@ -31,23 +31,20 @@
                     <div class="lobbyStat">⚔ 편성 <span id="lobbyEquipped">0/4</span></div>
                   </div>
                 </div>
-                <div class="chapterPanel">
-                  <div class="chapterUiBox">
-                    <div class="chapterSelector">
-                      <button class="btn ghost chapterArrow" id="btnChapterPrev" type="button" aria-label="이전 챕터">◀</button>
-                      <div class="chapterCurrent">
-                        <div class="chapterName" id="chapterName">챕터 1 · 잿빛 입구</div>
+                <div class="lobbyCenterStack">
+                  <div id="lobbyLoadoutRow" class="lobbyLoadoutRow"></div>
+                  <div class="chapterPanel">
+                    <div class="chapterUiBox">
+                      <div class="chapterSelector">
+                        <button class="btn ghost chapterArrow" id="btnChapterPrev" type="button" aria-label="이전 챕터">◀</button>
+                        <div class="chapterCurrent">
+                          <div class="chapterName" id="chapterName">챕터 1 · 잿빛 입구</div>
+                        </div>
+                        <button class="btn ghost chapterArrow" id="btnChapterNext" type="button" aria-label="다음 챕터">▶</button>
                       </div>
-                      <button class="btn ghost chapterArrow" id="btnChapterNext" type="button" aria-label="다음 챕터">▶</button>
+                      <button class="btn primary chapterEnterBtn" id="btnChapterEnter" type="button">🚪 입장</button>
                     </div>
-                    <button class="btn primary chapterEnterBtn" id="btnChapterEnter" type="button">🚪 입장</button>
                   </div>
-                </div>
-                <div class="lobbyLoadoutPanel">
-                  <div class="lobbyLoadoutHead">⚔️ 출전 영웅 편성 (메인에서 순서 변경)</div>
-                  <div id="lobbyLoadoutList" class="lobbyLoadoutList"></div>
-                  <div class="lobbyBenchHead">🪑 대기 영웅</div>
-                  <div id="lobbyBenchList" class="lobbyBenchList"></div>
                 </div>
                 <div class="lobbyActions">
                   <button class="btn ghost" id="btnLobbyHeroes" type="button">🧙 영웅 목록</button>
